--- a/style.css
+++ b/style.css
@@ -26,3 +26,75 @@ section{
 #comments{
     background-image: url(img/bgCOMMENTS.png);
 }
+.main-block, .about-block, .skills-block, 
+.work-block, .comments-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+}
+.main-block{
+    height: 100vh;
+    flex-direction: column;
+}
+.main-content{
+    width: 849px;
+    height: 223px;
+    padding-left: 30px; 
+    background-image: url(img/form1.png);
+   background-repeat: no-repeat;
+   background-size: contain;
+}
+.main-subtitle{
+    color: #2b2d35;
+    font-size: 20px;
+}
+.main-title{
+    color: #2b2d35;
+    font-size: 65px;
+    padding-top: 67px;
+}
+.button{
+    width: 200px;
+    height: 60px;
+    border: 2px  black solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    box-shadow: 5px 5px  black;
+    border-radius: 100px;
+    background-color: #bbff2c ;
+}
+.button a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #2b2d35;
+    font-weight: 800;
+}
+.button:hover{
+    background-color: #a0d826;
+}
+.moving-planet{
+    background-image: url(img/moving-planet.png);
+    width: 200px;
+    height: 230px;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    background-repeat: no-repeat;
+    animation-name: moving-planet;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 1s;
+}
+@keyframes moving-planet{
+    from{
+        transform:translateY(0px);
+    }
+    to{
+        transform: translateY(-150px);
+    }
+}
+
+
