--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ section{
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-delay: 1s;
+    animation-direction: alternate-reverse;
 }
 @keyframes moving-planet{
     from{
