--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     /* font-family: "Inter", sans-serif; */
     font-family: "Comfortaa", sans-serif;
 }
+* p {
+    color: #fff;
+}
+*{
+    color: #fff;
+}
 #main{
     background-image: url('img/bgMAIN.png');
 }
@@ -159,7 +165,7 @@ section{
     text-align: center;
     max-width: 500px;
 }
-@keyframes moving-planet{
+@keyframes moving-planet2{
     from{
         transform:translateY(0px);
     }
@@ -167,15 +173,15 @@ section{
         transform: translateY(-150px);
     }
 }
-.moving-planet{
-    background-image: url(img/moving-planet.png);
-    width: 200px;
-    height: 230px;
+.moving-planet2{
+    background-image: url(img/moving-planet2.png);
+    width: 208px;
+    height: 200px;
     position: absolute;
     bottom: 30px;
     left: 30px;
     background-repeat: no-repeat;
-    animation-name: moving-planet;
+    animation-name: moving-planet2;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-delay: 1s;
@@ -185,4 +191,35 @@ section{
     width: 27%;
     margin: 0px 20px;
     box-shadow: 7px 7px 0 #000 ;
+}
+.comments-block{
+    max-width: 1150px;
+    display: flex;
+    align-items: center;
+}
+.comment-card h3{
+    font-size: 18px;
+    padding: 10px; 
+}
+.comment p{
+    font-size: 18px;
+    padding: 10px 20px;
+    text-align: center;
+}
+footer{
+    background-color: #222d5b;
+    height: 200px;
+
+}
+.David{
+    text-align: left;
+    color: #fff;
+    font-size: 20px;
+}
+.footer-img{
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: right;
+    display: inline;
+    text-align: right;
 }
