--- a/style.css
+++ b/style.css
@@ -284,6 +284,12 @@ nav{
     justify-content: center;
     align-items: center;
 }
+.logo{
+    color:#bbff2c;
+    font-size: 80px;
+    margin-left: 50px;
+}
+
 
 
 
