--- a/style.css
+++ b/style.css
@@ -289,7 +289,23 @@ nav{
     font-size: 80px;
     margin-left: 50px;
 }
-
+.nav-link{
+    color: black;
+    text-decoration: none;
+    width: 132px;
+    height: 40px;
+    border-radius: 12px;
+    border: 2px solid black;
+    font-size: 20px;
+    background-color: #ffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+}
+.nav-link:hover{
+    transform: scale(1.15, 1.15);
+}
 
 
 
